fixed mobile view diamonds overflowing text

--- a/ui/sass/main.scss
+++ b/ui/sass/main.scss
@@ -95,7 +95,7 @@ body {
   background-color: #333;
   background-image: url("/assets/img/hero.png");
   background-size: cover;
-}
+}0
  .main-title{font-weight: 600 !important; font-size: 5rem !important; color: #0f47a1;}
 			
 .h1logo {margin-bottom: 40px;}
@@ -108,7 +108,7 @@ body {
 .dimants1 {background-image: url("/assets/img/dimants-1.svg"); background-repeat: no-repeat; background-size: 50px; background-position: left bottom;}
 .dimants2 {background-image: url("/assets/img/dimants-1.svg"); background-repeat: no-repeat; background-size: 50px; background-position: top center;}
 .dimants3 {background-image: url("/assets/img/dimants-2.svg"); background-repeat: no-repeat; background-size: 50px; background-position: 20% 30%;}
-.dimants4 {background-image: url("/assets/img/dimants-2.svg"); background-repeat: no-repeat; background-size: 50px; background-position: bottom left;}
+.dimants5 {background-image: url("/assets/img/dimants-2.svg"); background-repeat: no-repeat; background-size: 50px; background-position: top left;}
 .pogas-teksts{font-size: 32px !important; font-weight: 700; font-style: italic;}
 .dosje-h2{font-weight: 700; font-style: italic;}
 .cleargap {
